[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/human_farmer.png" type="Texture" id=1]
[ext_resource path="res://humans/human.gd" type="Script" id=2]
[ext_resource path="res://images/shadow.png" type="Texture" id=3]
[ext_resource path="res://humans/healthbar.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.995098, 0.463636 ), -0.741818, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.5 ), 0.0, 0.0, 0, 0, Vector2( 0.0441177, 0.981818 ), 0.358945, 0.358945, 0, 0, Vector2( 0.995098, 0.0090909 ), 0.193884, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.21547, 1 )
colors = PoolColorArray( 0.501961, 0.501961, 0.501961, 1, 0.756863, 0.756863, 0.756863, 0.611765, 0.913725, 0.913725, 0.913725, 0.435294 )

[node name="Human" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.592157 )
position = Vector2( 0, 29 )
scale = Vector2( 2.25, 2.25 )
z_index = -1
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="HealthBar" type="Node2D" parent="."]
position = Vector2( 0, -40 )
script = ExtResource( 5 )

[node name="BloodParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, -5 )
emitting = false
amount = 80
lifetime = 0.4
one_shot = true
randomness = 0.35
lifetime_randomness = 0.74
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 120 )
initial_velocity = 50.0
initial_velocity_random = 0.46
angular_velocity = 66.06
angular_velocity_random = 0.41
scale_amount = 4.0
scale_amount_random = 0.3
color = Color( 0.458824, 0.0470588, 0.0470588, 1 )
hue_variation = -0.09
hue_variation_random = 0.83

[node name="SweatParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, -24 )
emitting = false
amount = 6
lifetime = 0.8
emission_shape = 2
emission_rect_extents = Vector2( 7, 1 )
spread = 0.0
gravity = Vector2( 0, 60 )
scale_amount = 8.0
scale_amount_random = 0.72
scale_amount_curve = SubResource( 2 )
color = Color( 0.137255, 0.631373, 0.698039, 1 )

[node name="DeathParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 9 )
emitting = false
amount = 12
lifetime = 0.6
one_shot = true
explosiveness = 0.64
lifetime_randomness = 0.21
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0.01 )
initial_velocity = 60.0
angular_velocity = 105.69
angular_velocity_random = 0.45
linear_accel = 27.52
scale_amount = 30.0
scale_amount_random = 0.45
scale_amount_curve = SubResource( 3 )
color = Color( 0.270588, 0.270588, 0.270588, 1 )
color_ramp = SubResource( 4 )
hue_variation_random = 0.31
